# vic-lib

./: .gitignore  CMakeLists.txt  README.md  ef_lib.c  ef_lib.h  generator.c  lexer_main.c  main.c  merge.py  merge_finish.py  merge_prepare.py  split.py  split_finish.py  split_prepare.py
cmake/: cmakelist_post_generate.cmake  cmakelists_generator.cmake
lib/: dynamic_allocation.c  dynamic_allocation.h  pause_thread.c  pause_thread.h  vic.c  vic.h
